--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.6.1"
+coil = "2.4.0"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -52,6 +53,10 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 
 #Image compose
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+coil = { module = "io.coil-kt:coil", version.ref = "coil" }
+coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
+coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
+coil-video = { module = "io.coil-kt:coil-video", version.ref = "coil" }
 
 #Room
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
@@ -65,6 +70,7 @@ daggerHiltCompiler = { group = "com.google.dagger", name = "hilt-android-compile
 
 [bundles]
 room = ["androidx-room-runtime", "androidx-room-ktx"]
+coil = ["coil-compose", "coil", "coil-gif", "coil-svg", "coil-video"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
